# pico-ata

./: .gitignore  CMakeLists.txt  README.md  ata.cpp  ata.hpp  ata.pio  atapi.cpp  atapi.hpp  config.h  identity.hpp  pico-ata-test.cpp  pico-ata.cpp  scsi.hpp
.github/workflows/: cmake-pico.yml
usb-dev/: CMakeLists.txt  pico-ata-usb.cpp  usb-dev-config.h  usb_descriptors.c
